--- a/i18n/eng.lang
+++ b/i18n/eng.lang
@@ -84,6 +84,10 @@ Epd=Epd
 More...=More...
 Detect & Continue=Detect & Continue
 Skip Detection=Skip Detection
+Deutsch=Deutsch
+English=English
+Français=Français
+Finish=Finish
 
 [Translation]
 id=Checkbox
@@ -603,4 +607,11 @@ Added Engines:=Added Engines:
 C:\Chess\cutechess-cli\qapla\1.\2\amoeba-win\3.exe=C:\Chess\cutechess-cli\qapla\1.\2\amoeba-win\3.exe
 C:\Chess\cutechess-cli\qapla\1.\2\Counter-v\3.\4-windows-\5.exe=C:\Chess\cutechess-cli\qapla\1.\2\Counter-v\3.\4-windows-\5.exe
 We are now checking the engines and reading their options (auto-detect)...=We are now checking the engines and reading their options (auto-detect)...
+No messages in history.=No messages in history.
+Thank you! Your language has been set. You can now continue using the application.=Thank you! Your language has been set. You can now continue using the application.
+Choose Language=Choose Language
+Tutorial=Tutorial
+EPD Analysis=EPD Analysis
+Tournament=Tournament
+C:\Chess\cutechess-cli\qapla\1.\2\Critter_\3.\4b_\5bit.exe=C:\Chess\cutechess-cli\qapla\1.\2\Critter_\3.\4b_\5bit.exe
 
