--- a/i18n/fra.lang
+++ b/i18n/fra.lang
@@ -92,6 +92,7 @@ View HTML result=View HTML result
 Save...=Save...
 Show Results=Show Results
 View Detailed Results (HTML)=View Detailed Results (HTML)
+Show Result=Show Result
 
 [Translation]
 id=Checkbox
@@ -241,6 +242,8 @@ amoeba-win\1.exe=amoeba-win\1.exe
 Counter-v\1.\2-windows-\3.exe=Counter-v\1.\2-windows-\3.exe
 Critter_\1.\2b_\3bit.exe=Critter_\1.\2b_\3bit.exe
 Fruit-\1-\2-\3.exe=Fruit-\1-\2-\3.exe
+Amoeba \1.\2.w\3p=Amoeba \1.\2.w\3p
+Counter \1.=Counter \1.
 
 [Translation]
 id=Snackbar
@@ -266,6 +269,8 @@ No EPD or RAW position file selected.=No EPD or RAW position file selected.
 Starting engine autodetection.\nThis may take a while...=Starting engine autodetection.\nThis may take a while...
 Engine autodetection completed.=Engine autodetection completed.
 Tournament started=Tournament started
+All results have been cleared.=All results have been cleared.
+No new engines found.=No new engines found.
 
 [Translation]
 id=Table
@@ -416,6 +421,9 @@ Open a detailed HTML report with full tournament results table in your default b
 Continue to the next step.=Continue to the next step.
 Select option: Lernprogramm=Select option: Lernprogramm
 Open a detailed HTML report with full SPRT tournament results in your default browser.=Open a detailed HTML report with full SPRT tournament results in your default browser.
+Load a previously saved tournament from disk and replace the current tournament.=Load a previously saved tournament from disk and replace the current tournament.
+View the current tournament results without continuing.=View the current tournament results without continuing.
+Chess engine communication protocol (UCI or XBoard)=Chess engine communication protocol (UCI or XBoard)
 
 [Translation]
 id=Tab
@@ -588,4 +596,8 @@ C:\Chess\cutechess-cli\qapla\1.\2\Critter_\3.\4b_\5bit.exe=C:\Chess\cutechess-cl
 C:\Chess\cutechess-cli\qapla\1.\2\Fruit-\3-\4-\5.exe=C:\Chess\cutechess-cli\qapla\1.\2\Fruit-\3-\4-\5.exe
 Tournament Results (Tournament Results)\n\nTotal games played: \1\nEngines: \2\n\nTop \3:\n\4. Spike \5.\6.\7 [ponder] - \8.\9% (\10 Elo ±\11)\n\12. Spike \13.\14.\15 - \16.\17% (\18 Elo ±\19)=Tournament Results (Tournament Results)\n\nTotal games played: \1\nEngines: \2\n\nTop \3:\n\4. Spike \5.\6.\7 [ponder] - \8.\9% (\10 Elo ±\11)\n\12. Spike \13.\14.\15 - \16.\17% (\18 Elo ±\19)
 SPRT (Sequential Probability Ratio Test) compares two engines to determine if one is significantly stronger. The test continues until a decision is reached or the maximum number of games is played.=SPRT (Sequential Probability Ratio Test) compares two engines to determine if one is significantly stronger. The test continues until a decision is reached or the maximum number of games is played.
+The values shown are: [Lower Bound < LLR < Upper Bound]\n• LLR (Log-Likelihood Ratio): Current evidence strength\n• Lower Bound: If LLR falls below this, H\1 is accepted (no significant difference)\n• Upper Bound: If LLR rises above this, H\2 is accepted (significant difference)\nThe test continues as long as LLR stays between the bounds.=The values shown are: [Lower Bound < LLR < Upper Bound]\n• LLR (Log-Likelihood Ratio): Current evidence strength\n• Lower Bound: If LLR falls below this, H\1 is accepted (no significant difference)\n• Upper Bound: If LLR rises above this, H\2 is accepted (significant difference)\nThe test continues as long as LLR stays between the bounds.
+The values shown are: [Lower Bound < LLR (Log-Likelihood Ratio) < Upper Bound]\nIf LLR falls below lowerbound, then the engine is not "lower" elo stronger (H\1 accepted).\nIf LLR exceeds upperbound, then the engine is at least "higher" elo stronger (H\2 accepted).\nThe test continues as long as LLR stays between the bounds.=The values shown are: [Lower Bound < LLR (Log-Likelihood Ratio) < Upper Bound]\nIf LLR falls below lowerbound, then the engine is not "lower" elo stronger (H\1 accepted).\nIf LLR exceeds upperbound, then the engine is at least "higher" elo stronger (H\2 accepted).\nThe test continues as long as LLR stays between the bounds.
+The values shown are: [Lower Bound < LLR (Log-Likelihood Ratio) < Upper Bound]\nIf LLR falls below lowerbound, then the engine is not \1 elo stronger (H\2 accepted).\nIf LLR exceeds upperbound, then the engine is at least \3 elo stronger (H\4 accepted).\nThe test continues as long as LLR stays between the bounds.=The values shown are: [Lower Bound < LLR (Log-Likelihood Ratio) < Upper Bound]\nIf LLR falls below lowerbound, then the engine is not \1 elo stronger (H\2 accepted).\nIf LLR exceeds upperbound, then the engine is at least \3 elo stronger (H\4 accepted).\nThe test continues as long as LLR stays between the bounds.
+The values shown are: [Lower Bound < LLR (Log-Likelihood Ratio) < Upper Bound]\nIf LLR falls below lowerbound, then the engine is not \1 elo stronger (H\2 accepted).\nIf LLR exceeds upperbound, then the engine is at least \3 elo stronger (H\4 accepted).\nThe test continues as long as LLR stays between the bounds and the maximum number of games (\5) is not reached.=The values shown are: [Lower Bound < LLR (Log-Likelihood Ratio) < Upper Bound]\nIf LLR falls below lowerbound, then the engine is not \1 elo stronger (H\2 accepted).\nIf LLR exceeds upperbound, then the engine is at least \3 elo stronger (H\4 accepted).\nThe test continues as long as LLR stays between the bounds and the maximum number of games (\5) is not reached.
 
